@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 May 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> prokka-1.11.ebuild:
+  sci-biology/prokka: more DEPs recorded
+
 *prokka-1.11 (05 May 2015)
 
   05 May 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> +metadata.xml,
